[project]
name = "wikiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ipykernel>=6.29.5",
    "llama-index-agent-openai>=0.3.4",
    "llama-index-llms-azure-openai>=0.2.2",
    "llama-index-llms-openai>=0.2.13",
    "llama-index>=0.11.18",
    "networkx>=3.4.1",
    "openai<=1.44.1",
    # https://github.com/microsoft/promptflow/issues/3751,
    "promptflow-tracing>=1.16.1",
    "promptflow>=1.16.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
ipykernel = "^6.29.5"

[tool.ruff]
line-length = 120
select = ["I"]
